# functions

./: CMakeLists.txt  README.md
source/: algorithm.cpp  algorithm.h  function.cpp  function.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  program.cpp  program.h  queue.cpp  queue.h  type.cpp  type.h
tests/: CMakeLists.txt  main.cpp
